--- a/views/docs-1.html
+++ b/views/docs-1.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Rey</title>
+    <title>Api</title>
     <link href="https://inirey.github.io/lolhuman/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://inirey.github.io/lolhuman/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="https://inirey.github.io/lolhuman/css/default.css" rel="stylesheet">
@@ -409,7 +409,7 @@
                 Contact
             </div>
             <li class="nav-item">
-                <a class="nav-link" href="https://t.me/asuuu">
+                <a class="nav-link" href="">
                     <i class="fab fa-fw fa-telegram-plane"></i>
                     <span>Telegram</span>
                 </a>
@@ -451,7 +451,7 @@
                   </div>
                   <div>
                     <div class="small text-gray-500">February 19, 2020</div>
-                    <span style="font-size:12px;">Apikey: apirey</span>
+                    <span style="font-size:12px;">Apikey: APIKEY</span>
                   </div>
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
@@ -547,7 +547,7 @@
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
                         Made with <i class="fa fa-heart faa-flash animated"></i> by
-                        <a href="https://github.com/inirey" target="_blank" style="color: #fff;">Reyyyy</a>
+                        <a href="https://github." target="_blank" style="color: #fff;">Pepek:v</a>
                         </span>
                     </div>
                 </div>
