--- a/views/docs-1.html
+++ b/views/docs-1.html
@@ -22,7 +22,7 @@
         <ul class="navbar-nav sidebar sidebar-light accordion" id="accordionSidebar">
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <i class="fa fa-smile-beam fa-2x"></i>
-                <div class="sidebar-brand-text mx-3">Sekha APIs</div>
+                <div class="sidebar-brand-text mx-3">APIs</div>
             </a>
             <hr class="sidebar-divider my-0">
             <li class="nav-item active">
@@ -481,8 +481,8 @@
     
                     <div class="card-body mb-3">
                         <ol>
-                            <li>Mohon untuk tidak spam APIKeys</li>
-                            <li>Jika APIkeys invalid hubungi saya</li>
+                            <li>Mohon untuk tidak spam Request</li>
+                            <li>Jika ApiKey invalid hubungi saya</li>
                             <li>Semua fitur yang ada di sini free dan unlimited request</li>
                             <li>Rest API sewaktu waktu akan maintenance</li>
                             <li>udah itu aja</li>
@@ -519,7 +519,7 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-uppercase mb-1">Requests</div>
-                                            <div class="h5 mb-0 font-weight-bold">83663372</div>
+                                            <div class="h5 mb-0 font-weight-bold">100027</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-calendar faa-wrench animated fa-2x text-primary"></i>
@@ -534,8 +534,8 @@
                         <div class="col-lg-12 text-center">
                             Someone want to donate me?
                             <p>
-                                <a href="https://trakteer.id/erzabot" class="btn btn-primary btn-sm mr-2" target="_blank"><i class="fa fa-fw fa-wallet"></i>&nbsp;Trakteer</a>
-                                <a href="https://paypal.me/anjay" class="btn btn-primary btn-sm ml-2" target="_blank"><i class="fab fa-fw fa-paypal"></i>&nbsp;Paypal</a>
+                                <a href="" class="btn btn-primary btn-sm mr-2" target="_blank"><i class="fa fa-fw fa-wallet"></i>&nbsp;Trakteer</a>
+                                <a href="" class="btn btn-primary btn-sm ml-2" target="_blank"><i class="fab fa-fw fa-paypal"></i>&nbsp;Paypal</a>
                             </p>
                         </div>
                     </div>
@@ -547,7 +547,7 @@
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
                         Made with <i class="fa fa-heart faa-flash animated"></i> by
-                        <a href="https://github." target="_blank" style="color: #fff;">Pepek:v</a>
+                        <a href="https://github.com" target="_blank" style="color: #fff;">Pepek:v</a>
                         </span>
                     </div>
                 </div>
