--- a/views/docs.html
+++ b/views/docs.html
@@ -22,7 +22,6 @@
 <div class="sidebar" id="sidebar">
 <ul>
 <li><a class="active" href="https://tiodevhost.my.id">My Portofolio</a></li>
-<li><a class="active" href="https://ytdl.tiodevhost.my.id">Yt Downloader</a></li>
 </ul>
 </div>
 <div class="header">
@@ -57,7 +56,7 @@
 <a href="https://instagram.com/prm2.0" class="icon">
 <i class="fab fa-instagram"></i>
 </a>
-<a href="https://chat.whatsapp.com/Ln2vHjRrRayAbzalRMB56r" class="icon">
+<a href="" class="icon">
 <i class="fab fa-whatsapp"></i>
 </a>
 </div>
